2009-03-29  Roland McGrath  <roland@redhat.com>

	* c++/exception.cc: New file.
	* Makefile.am (libdwpp_a_SOURCES): Add it.

2009-03-25  Roland McGrath  <roland@redhat.com>

	* c++/dwarf, c++/values.cc: Proper dwarf_constant support.
	* c++/dwarf_edit, c++/edit-values.cc: Likewise.
	* c++/known.cc: New file.
	* Makefile.am (libdwpp_a_SOURCES): Add it.

2009-03-24  Petr Machata  <pmachata@redhat.com>

	* c++/dwarf (dwarf::debug_info_entry::raw_attributes):
	Fix iteration over attributes.

2009-03-24  Roland McGrath  <roland@redhat.com>

	* Makefile.am (libdwpp_a_SOURCES): New variable.
	(lib_LIBRARIES): Add libdwpp.a to it.

2009-02-26  Roland McGrath  <roland@redhat.com>

	* c++/dwarf (dwarf::attr_value): Add _m_tag private member.
	(dwarf::attr_value, dwarf::attribute): Update initializers.
	(dwarf::raw_attributes::const_iterator): Update caller.
	* c++/values.cc (attr_value::what_space): Use it.

2009-02-01  Roland McGrath  <roland@redhat.com>

	* c++/edit-values.cc: New file.

2009-01-28  Roland McGrath  <roland@redhat.com>

	* c++/dwarf: Add line table support.
	* c++/values.cc: New file.
	* c++/line_info.cc: New file.
	* c++/subr.hh: New file.
	* Makefile.am (pkginclude_HEADERS): Add it.

	* libdwP.h (struct Dwarf_Line_s): Move out of struct Dwarf_Lines_s
	defn so C++ doesn't scope the name to not match the Dwarf_Line typedef.

	* libdwP.h (struct Dwarf_Files_s): Replace dbg field with cu field.

2009-01-26  Roland McGrath  <roland@redhat.com>

	* c++/dwarf (dwarf_output): Renamed to dwarf_edit and moved to ...
	* c++/dwarf_edit: ... here.  New file.
	* Makefile.am (pkginclude_HEADERS): Add it.

2009-01-10  Roland McGrath  <roland@redhat.com>

	* c++/dwarf: New file.
	* Makefile.am (pkginclude_HEADERS): Add it.

2009-04-01  Roland McGrath  <roland@redhat.com>

	* dwarf.h: Add DW_CFA_GNU_negative_offset_extended.

2009-01-26  Roland McGrath  <roland@redhat.com>

	* dwarf_ranges.c: Return 0 when no ranges or *_pc attrs at all.
