@@ -1,3 +1,8 @@
+2009-04-02  Roland McGrath  <roland@redhat.com>
+
+	* Makefile.am (noinst_HEADERS): Add known-dwarf.h and
+	c++/dwarf-knowledge.cc here.
+
 2009-03-29  Roland McGrath  <roland@redhat.com>
 
 	* c++/exception.cc: New file.
